; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_portalmem.c_GetPortalByName.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_portalmem.c_GetPortalByName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetPortalByName(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i64 @PointerIsValid(i8* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @PortalHashTableLookup(i8* %8, i32* %9)
  br label %12

11:                                               ; preds = %1
  store i32* null, i32** %3, align 8
  br label %12

12:                                               ; preds = %11, %7
  %13 = load i32*, i32** %3, align 8
  ret i32* %13
}

declare dso_local i64 @PointerIsValid(i8*) #1

declare dso_local i32 @PortalHashTableLookup(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
